--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
     <meta charset=UTF-8>
-		<title>Intro to Angular 2</title>
-		<base href="/">
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" >
-        <!--<link rel="stylesheet" href="styles.css">-->
-
-        
-	</head>
-	<body class="container">
-        <header>
-            <h1 class="text-center">Angular 2 Samples</h1>
-        </header>
-		<app>Loading...</app>
-		<script src="vendor.bundle.js"></script>
-		<script src="bundle.js"></script>
-	</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Intro to Angular 2</title>
+    <base href="/">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link rel="stylesheet" href="styles.css">-->
+</head>
+<body class="container">
+<header>
+    <h1 class="text-center">Angular 2 Samples</h1>
+</header>
+<app>Loading...</app>
+<script src="polyfills.bundle.js"></script>
+<script src="vendor.bundle.js"></script>
+<script src="app.bundle.js"></script>
+</body>
 </html>
 
 <body>
