reset live coding form properly (has some misleading dats)

--- a/src/day2/forms-live-coding/form.html
+++ b/src/day2/forms-live-coding/form.html
@@ -1,46 +1,41 @@
-<form #f="ngForm" [formGroup]="myForm" novalidate (ngSubmit)="submitForm(f)">
+<form novalidate>
     <md-card>
         <md-card-title>Registration Form</md-card-title>
         <md-card-content>
             <div class="flex">
-                <md-input formControlName="firstName" placeholder="First name"></md-input>
-                <md-input formControlName="lastName" placeholder="Last name"></md-input>
+                <md-input placeholder="First name"></md-input>
+                <md-input placeholder="Last name"></md-input>
             </div>
-            <md-input formControlName="username" placeholder="Username"></md-input>
-            <div [hidden]="myForm.get('username').valid || myForm.get('username').pristine" class="alert alert-danger">
-                Name is required
-            </div>
-            <div formArrayName="address" Name="address">
-                <div *ngFor="let
+            <md-input placeholder="Username"></md-input>
+            <div>
+                <div>
                     <p>Address</p>
-                    <md-input formControlName="street" placeholder="Street"></md-input>
+                    <md-input placeholder="Street" required></md-input>
                     <div class="flex align-center">
-                        <md-input formControlName="city" placeholder="City"></md-input>
-                        <select formControlName="state">
+                        <md-input placeholder="City"></md-input>
+                        <select>
                             <option value="" disabled>Select a state</option>
                             <option value="CA">CA</option>
                             <option value="NY">NY</option>
                         </select>
-                        <md-input formControlName="zip" placeholder="zip" type="number"></md-input>
+                        <md-input placeholder="zip" type="number"></md-input>
+                    </div>
                 </div>
-                <button md-button (click)="addAddress()">ADD ADDRESS</button>
+                <!--<button md-button (click)="addAddress()">ADD ADDRESS</button>-->
             </div>
             <p>Would you like a newsletter?</p>
             <label for="yes">
-                <input formControlName="newsletter" type="radio" [value]="true" id="yes">
+                <input type="radio" id="yes">
                 Yes
             </label>
             <label for="no">
-                <input formControlName="newsletter" type="radio" [value]="false" id="no">
+                <input type="radio" id="no">
                 No
             </label>
-            <input formControlName="human" type="checkbox"> I am not a robot
+            <input type="checkbox"> I am not a robot
         </md-card-content>
         <md-card-actions align="end">
             <button md-button color="primary" type="submit">SUBMIT</button>
         </md-card-actions>
     </md-card>
 </form>
-<pre>
-{{myForm.value|json}}
-</pre>
