--- a/src/day4/forms-live-coding-model-driven/form.html
+++ b/src/day4/forms-live-coding-model-driven/form.html
@@ -3,25 +3,25 @@
         <md-card-title>Registration Form</md-card-title>
         <md-card-content>
             <div class="flex">
-                <md-input formControlName="firstName" placeholder="First name"></md-input>
-                <md-input formControlName="lastName" placeholder="Last name"></md-input>
+                <input md-input formControlName="firstName" placeholder="First name"/>
+                <input md-input formControlName="lastName" placeholder="Last name"/>
             </div>
-            <md-input formControlName="username" placeholder="Username"></md-input>
+            <input md-input formControlName="username" placeholder="Username"/>
             <div [hidden]="myForm.get('username').valid || myForm.get('username').pristine" class="alert alert-danger">
                 Name is required
             </div>
             <div formArrayName="address" Name="address">
                 <div *ngFor="let address of addresses.controls; let i = index;" [formGroupName]="i">
                     <p>Address</p>
-                    <md-input formControlName="street" placeholder="Street"></md-input>
+                    <input md-input formControlName="street" placeholder="Street"/>
                     <div class="flex align-center">
-                        <md-input formControlName="city" placeholder="City"></md-input>
+                        <input md-input formControlName="city" placeholder="City"/>
                         <select formControlName="state">
                             <option value="" disabled>Select a state</option>
                             <option value="CA">CA</option>
                             <option value="NY">NY</option>
                         </select>
-                        <md-input formControlName='zip' placeholder="zip" type="number"></md-input>
+                        <input md-input formControlName='zip' placeholder="zip" type="number"/>
                     </div>
                 </div>
                 <button md-button (click)="addAddress()">ADD ADDRESS</button>
